--- a/ang-jwt/src/app/components/employee-list/employee-list.component.html
+++ b/ang-jwt/src/app/components/employee-list/employee-list.component.html
@@ -38,10 +38,10 @@
       [loading]="loading"
       [paginator]="true"
       [rows]="pagination.pageSize"
-      (onLazyLoad)="pageChange($event)"
+      (onLazyLoad)="onPageChange($event)"
       [showCurrentPageReport]="true"
       [totalRecords]="pagination.totalItems"
-      [rowsPerPageOptions]="[10,20,50,100,2]"
+      [rowsPerPageOptions]="[2,5,10,20,50,100,]"
       [rowHover]="true"
       [lazy]="true"
       [pageLinks]="5"
